--- a/calculator.html
+++ b/calculator.html
@@ -85,7 +85,7 @@
             Object.keys(calHistory.history).forEach(key =>{
                 document.getElementById("calculatorHistory").innerHTML += `<br>${key}: calculation = ${calHistory.history[key].calculation} = ${calHistory.history[key].result}`;
             });
-        }
+        }//hello
     </script>
 </body>
 </html>
